k8s/client.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
  - name: client
    port: 3000
    targetPort: 3000
  type: ClusterIP
