k8s/comments.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  ports:
  - name: comments
    port: 4001
    targetPort: 4001
  type: ClusterIP
