k8s/event-bus.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus
  ports:
  - name: event-bus
    port: 4005
    targetPort: 4005
  type: ClusterIP
