k8s/moderation.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  selector:
    app: moderation
  ports:
  - name: moderation
    port: 4003
    targetPort: 4003
  type: ClusterIP
