k8s/posts.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts
  ports:
  - name: posts
    port: 4000
    targetPort: 4000
  type: ClusterIP
