k8s/query.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  ports:
  - name: query
    port: 4002
    targetPort: 4002
  type: ClusterIP
